# attractor-app

./: .gitignore  AGENTS.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.amplifier/: settings.yaml
.github/workflows/: build-frontend.yaml
app/: README.md  index.html  package.json  pnpm-lock.yaml
app/src/: App.tsx  api.ts  types.ts  ws.ts
app/src/components/: ConnectGitHubDialog.tsx  CreateLabelForm.tsx  EmptyState.tsx  GitHubAuthSetup.tsx  GitHubRepoPicker.tsx  GitHubSetupBanner.tsx  LabelBadge.tsx  LoadingSpinner.tsx  NewProjectFlow.tsx  PathInput.tsx  TimeAgo.tsx
app/src/pages/: IssueDetail.tsx  IssuesView.tsx  ProjectPicker.tsx  ProjectSettings.tsx
issues_server/: README.md  pyproject.toml
issues_server/src/issues_server/: __init__.py  amplifier.py  config.py  deps.py  frontend.py  github_client.py  main.py  models.py  storage.py  ws.py
issues_server/src/issues_server/routes/: amplifier.py  comments.py  config.py  filesystem.py  github_auth.py  issues.py  labels.py  projects.py  store.py
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: amplifier.rs  commands.rs  error.rs  github.rs  lib.rs  main.rs  models.rs  state.rs  storage.rs
src/components/: AuthGate.tsx  CreateLabelForm.tsx  EmptyState.tsx  LabelBadge.tsx  LoadingSpinner.tsx  TimeAgo.tsx
src/pages/: IssueDetail.tsx  IssuesView.tsx  ProjectPicker.tsx
