[project]
name = "issues-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DavidKoleczek", email = "45405824+DavidKoleczek@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
issues-server = "issues_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
