[package]
name = "attractor-app"
version = "0.1.0"
description = "Attractor Issues - GitHub-backed issue tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "attractor_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
git2 = "0.19"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
dirs = "5"
tauri-plugin-dialog = "2"
